--- a/front/src/scss/_variables.scss
+++ b/front/src/scss/_variables.scss
@@ -1,6 +1,9 @@
-$app-color: #2B4162;
-$layer-color: #385F71;
-$border-color: #518AA4;
-$text-color: #F5F0F6;
-$accent-color: #49A078;
-$hover-color: #81D986;
+$color-primary: #008abb;
+$color-primary-hover: #00b1ce;
+$color-secondary: #ec9929;
+$color-secondary-hover: #ffa25c;
+$color-tertiary: #009467;
+$color-quaternary: #cf5c5c;
+$color-text: #e6f4f1;
+$color-background: #1e303c;
+$color-border: #374955;
